@@ -461,4 +461,5 @@ t + 1/3*t^3 - 1/2*t^4 + 14/15*t^5 + O(t^6)
   ***   at top-level: ellformalw(e,-1)
   ***                 ^----------------
   *** ellformalw: domain error in ellformalw: precision <= 0
-Total time spent: 496
+242.47010035195076100129810400142304776
+Total time spent: 500
