@@ -198,7 +198,10 @@ ELL
 8135906792497 - 1.0687497763561930661592635474375038788*I]
 .roots: [-1.6189099322673713423780009396072169751, -0.3155450338663143288109
 9953019639151248 + 2.0925470969119586079816894466366945829*I, -0.31554503386
-631432881099953019639151248 - 2.0925470969119586079816894466366945829*I]~
+631432881099953019639151248 - 2.0925470969119586079816894466366945829*I, 0.E
+-38 + 4.1850941938239172159633788932733891659*I, -1.303364898401057013567001
+4094108254626 + 2.0925470969119586079816894466366945829*I, -1.30336489840105
+70135670014094108254626 - 2.0925470969119586079816894466366945829*I]~
 ELLFp
 .a1: Mod(1, 13)
 .a2: Mod(2, 13)
@@ -311,4 +314,4 @@ ll([])], Mat([1/2, -1/2])]], [[], [], []]], Mat([0, 1])]
 .mod: [[4, 1; 0, 1], [0, 0]]
 .no: 2
 .zkst: [2, [2]]
-Total time spent: 52
+Total time spent: 44
