@@ -271,3 +271,9 @@ F=[ellformalw,ellformalpoint,ellformaldifferential,ellformallog,ellformalexp];
 for(i=1,#F,print(F[i]);test(F[i]));
 ellformalw(e,0)
 ellformalw(e,-1)
+
+\\#1637
+U=[-245369975623514803521420211420402474815373720177518420696215292670924086780233779586506792145074717/4069861969699146045958032034788970995470603578576,-696053034387689435413673877713244121475782562610666903528251447608130654196417305610237634015759861/4069861969699146045958032034788970995470603578576,-49356694805693369953216822105035107974083562942605713355717183776373331122267882948881129025418396548321363993080002121985116427859996985649385099335/4069861969699146045958032034788970995470603578576,5996724761485351384753083917633373954904218466995628499407992841502416127074022935350022919212488198205525833829916828282709837728834438536000230267/1017465492424786511489508008697242748867650894644,-1943033527672518505867347410801184866534773028979571976479290969993491996577167508758887358085512124817167326269402804641328588524702957475568608101932310746684310251168033629279636817525659690186705/4069861969699146045958032034788970995470603578576];
+E=ellinit(U);
+P=[283188771261789732541662405743402980051199109235,39175522019721182331498476245534716069785193060995];
+ellheight(E,P)
